project3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> LBRACE inblock RBRACE
Rule 2     block -> LBRACE RBRACE
Rule 3     inblock -> smt inblock
Rule 4     smt -> print_smt
Rule 5     print_smt -> PRINT LPAREN expression RPAREN SEMI
Rule 6     smt -> IF LPAREN expression RPAREN LBRACE inblock RBRACE
Rule 7     smt -> IF LPAREN expression RPAREN LBRACE inblock RBRACE ELSE LBRACE inblock RBRACE
Rule 8     smt -> WHILE LPAREN expression RPAREN LBRACE inblock RBRACE
Rule 9     smt -> ID ASSIGN expression SEMI
Rule 10    smt -> ID LRACE factor RRACE ASSIGN expression SEMI
Rule 11    expression -> LRACE inblock RRACE LRACE factor RRACE
Rule 12    expression -> LRACE inblock RRACE
Rule 13    inblock -> expression COMMA inblock
Rule 14    expression -> expression LRACE factor RRACE
Rule 15    inblock -> LRACE inblock RRACE
Rule 16    inblock -> smt
Rule 17    inblock -> expression
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression POWER expression
Rule 23    expression -> expression MODULUS expression
Rule 24    expression -> expression FLOOR expression
Rule 25    expression -> expression LESS expression
Rule 26    expression -> expression GREAT expression
Rule 27    expression -> expression LESSEQU expression
Rule 28    expression -> expression GREATEQU expression
Rule 29    expression -> expression EQU expression
Rule 30    expression -> expression NOTEQU expression
Rule 31    expression -> expression AND expression
Rule 32    expression -> expression OR expression
Rule 33    expression -> expression NOT expression
Rule 34    expression -> expression IN expression
Rule 35    expression -> NOT expression
Rule 36    expression -> MINUS expression
Rule 37    expression -> factor
Rule 38    factor -> NUMBER
Rule 39    factor -> BOOLEAN
Rule 40    factor -> STRING
Rule 41    factor -> ID
Rule 42    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 31
ASSIGN               : 9 10
BOOLEAN              : 39
COMMA                : 13
DIVIDE               : 21
ELSE                 : 7
EQU                  : 29
FLOOR                : 24
GREAT                : 26
GREATEQU             : 28
ID                   : 9 10 41
IF                   : 6 7
IN                   : 34
LBRACE               : 1 2 6 7 7 8
LESS                 : 25
LESSEQU              : 27
LPAREN               : 5 6 7 8 42
LRACE                : 10 11 11 12 14 15
MINUS                : 19 36
MODULUS              : 23
NOT                  : 33 35
NOTEQU               : 30
NUMBER               : 38
OR                   : 32
PLUS                 : 18
POWER                : 22
PRINT                : 5
RBRACE               : 1 2 6 7 7 8
RPAREN               : 5 6 7 8 42
RRACE                : 10 11 11 12 14 15
SEMI                 : 5 9 10
STRING               : 40
TIMES                : 20
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

block                : 0
expression           : 5 6 7 8 9 10 13 14 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36 42
factor               : 10 11 14 37
inblock              : 1 3 6 7 7 8 11 12 13 15
print_smt            : 4
smt                  : 3 16

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . LBRACE inblock RBRACE
    (2) block -> . LBRACE RBRACE

    LBRACE          shift and go to state 2

    block                          shift and go to state 1

state 1

    (0) S' -> block .



state 2

    (1) block -> LBRACE . inblock RBRACE
    (2) block -> LBRACE . RBRACE
    (3) inblock -> . smt inblock
    (13) inblock -> . expression COMMA inblock
    (15) inblock -> . LRACE inblock RRACE
    (16) inblock -> . smt
    (17) inblock -> . expression
    (4) smt -> . print_smt
    (6) smt -> . IF LPAREN expression RPAREN LBRACE inblock RBRACE
    (7) smt -> . IF LPAREN expression RPAREN LBRACE inblock RBRACE ELSE LBRACE inblock RBRACE
    (8) smt -> . WHILE LPAREN expression RPAREN LBRACE inblock RBRACE
    (9) smt -> . ID ASSIGN expression SEMI
    (10) smt -> . ID LRACE factor RRACE ASSIGN expression SEMI
    (11) expression -> . LRACE inblock RRACE LRACE factor RRACE
    (12) expression -> . LRACE inblock RRACE
    (14) expression -> . expression LRACE factor RRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression POWER expression
    (23) expression -> . expression MODULUS expression
    (24) expression -> . expression FLOOR expression
    (25) expression -> . expression LESS expression
    (26) expression -> . expression GREAT expression
    (27) expression -> . expression LESSEQU expression
    (28) expression -> . expression GREATEQU expression
    (29) expression -> . expression EQU expression
    (30) expression -> . expression NOTEQU expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression NOT expression
    (34) expression -> . expression IN expression
    (35) expression -> . NOT expression
    (36) expression -> . MINUS expression
    (37) expression -> . factor
    (42) expression -> . LPAREN expression RPAREN
    (5) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (38) factor -> . NUMBER
    (39) factor -> . BOOLEAN
    (40) factor -> . STRING
    (41) factor -> . ID

    RBRACE          shift and go to state 4
    LRACE           shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ID              shift and go to state 12
    NOT             shift and go to state 15
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 10
    PRINT           shift and go to state 16
    NUMBER          shift and go to state 17
    BOOLEAN         shift and go to state 18
    STRING          shift and go to state 19

    inblock                        shift and go to state 3
    smt                            shift and go to state 5
    expression                     shift and go to state 6
    print_smt                      shift and go to state 8
    factor                         shift and go to state 13

state 3

    (1) block -> LBRACE inblock . RBRACE

    RBRACE          shift and go to state 20


state 4

    (2) block -> LBRACE RBRACE .

    $end            reduce using rule 2 (block -> LBRACE RBRACE .)


state 5

    (3) inblock -> smt . inblock
    (16) inblock -> smt .
    (3) inblock -> . smt inblock
    (13) inblock -> . expression COMMA inblock
    (15) inblock -> . LRACE inblock RRACE
    (16) inblock -> . smt
    (17) inblock -> . expression
    (4) smt -> . print_smt
    (6) smt -> . IF LPAREN expression RPAREN LBRACE inblock RBRACE
    (7) smt -> . IF LPAREN expression RPAREN LBRACE inblock RBRACE ELSE LBRACE inblock RBRACE
    (8) smt -> . WHILE LPAREN expression RPAREN LBRACE inblock RBRACE
    (9) smt -> . ID ASSIGN expression SEMI
    (10) smt -> . ID LRACE factor RRACE ASSIGN expression SEMI
    (11) expression -> . LRACE inblock RRACE LRACE factor RRACE
    (12) expression -> . LRACE inblock RRACE
    (14) expression -> . expression LRACE factor RRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression POWER expression
    (23) expression -> . expression MODULUS expression
    (24) expression -> . expression FLOOR expression
    (25) expression -> . expression LESS expression
    (26) expression -> . expression GREAT expression
    (27) expression -> . expression LESSEQU expression
    (28) expression -> . expression GREATEQU expression
    (29) expression -> . expression EQU expression
    (30) expression -> . expression NOTEQU expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression NOT expression
    (34) expression -> . expression IN expression
    (35) expression -> . NOT expression
    (36) expression -> . MINUS expression
    (37) expression -> . factor
    (42) expression -> . LPAREN expression RPAREN
    (5) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (38) factor -> . NUMBER
    (39) factor -> . BOOLEAN
    (40) factor -> . STRING
    (41) factor -> . ID

    RBRACE          reduce using rule 16 (inblock -> smt .)
    RRACE           reduce using rule 16 (inblock -> smt .)
    LRACE           shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ID              shift and go to state 12
    NOT             shift and go to state 15
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 10
    PRINT           shift and go to state 16
    NUMBER          shift and go to state 17
    BOOLEAN         shift and go to state 18
    STRING          shift and go to state 19

    smt                            shift and go to state 5
    inblock                        shift and go to state 21
    expression                     shift and go to state 6
    print_smt                      shift and go to state 8
    factor                         shift and go to state 13

state 6

    (13) inblock -> expression . COMMA inblock
    (17) inblock -> expression .
    (14) expression -> expression . LRACE factor RRACE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . POWER expression
    (23) expression -> expression . MODULUS expression
    (24) expression -> expression . FLOOR expression
    (25) expression -> expression . LESS expression
    (26) expression -> expression . GREAT expression
    (27) expression -> expression . LESSEQU expression
    (28) expression -> expression . GREATEQU expression
    (29) expression -> expression . EQU expression
    (30) expression -> expression . NOTEQU expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression
    (33) expression -> expression . NOT expression
    (34) expression -> expression . IN expression

    COMMA           shift and go to state 22
    RBRACE          reduce using rule 17 (inblock -> expression .)
    RRACE           reduce using rule 17 (inblock -> expression .)
    LRACE           shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    POWER           shift and go to state 28
    MODULUS         shift and go to state 29
    FLOOR           shift and go to state 30
    LESS            shift and go to state 31
    GREAT           shift and go to state 32
    LESSEQU         shift and go to state 33
    GREATEQU        shift and go to state 34
    EQU             shift and go to state 35
    NOTEQU          shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    NOT             shift and go to state 39
    IN              shift and go to state 40


state 7

    (15) inblock -> LRACE . inblock RRACE
    (11) expression -> LRACE . inblock RRACE LRACE factor RRACE
    (12) expression -> LRACE . inblock RRACE
    (3) inblock -> . smt inblock
    (13) inblock -> . expression COMMA inblock
    (15) inblock -> . LRACE inblock RRACE
    (16) inblock -> . smt
    (17) inblock -> . expression
    (4) smt -> . print_smt
    (6) smt -> . IF LPAREN expression RPAREN LBRACE inblock RBRACE
    (7) smt -> . IF LPAREN expression RPAREN LBRACE inblock RBRACE ELSE LBRACE inblock RBRACE
    (8) smt -> . WHILE LPAREN expression RPAREN LBRACE inblock RBRACE
    (9) smt -> . ID ASSIGN expression SEMI
    (10) smt -> . ID LRACE factor RRACE ASSIGN expression SEMI
    (11) expression -> . LRACE inblock RRACE LRACE factor RRACE
    (12) expression -> . LRACE inblock RRACE
    (14) expression -> . expression LRACE factor RRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression POWER expression
    (23) expression -> . expression MODULUS expression
    (24) expression -> . expression FLOOR expression
    (25) expression -> . expression LESS expression
    (26) expression -> . expression GREAT expression
    (27) expression -> . expression LESSEQU expression
    (28) expression -> . expression GREATEQU expression
    (29) expression -> . expression EQU expression
    (30) expression -> . expression NOTEQU expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression NOT expression
    (34) expression -> . expression IN expression
    (35) expression -> . NOT expression
    (36) expression -> . MINUS expression
    (37) expression -> . factor
    (42) expression -> . LPAREN expression RPAREN
    (5) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (38) factor -> . NUMBER
    (39) factor -> . BOOLEAN
    (40) factor -> . STRING
    (41) factor -> . ID

    LRACE           shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ID              shift and go to state 12
    NOT             shift and go to state 15
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 10
    PRINT           shift and go to state 16
    NUMBER          shift and go to state 17
    BOOLEAN         shift and go to state 18
    STRING          shift and go to state 19

    inblock                        shift and go to state 41
    factor                         shift and go to state 13
    smt                            shift and go to state 5
    expression                     shift and go to state 6
    print_smt                      shift and go to state 8

state 8

    (4) smt -> print_smt .

    LRACE           reduce using rule 4 (smt -> print_smt .)
    IF              reduce using rule 4 (smt -> print_smt .)
    WHILE           reduce using rule 4 (smt -> print_smt .)
    ID              reduce using rule 4 (smt -> print_smt .)
    NOT             reduce using rule 4 (smt -> print_smt .)
    MINUS           reduce using rule 4 (smt -> print_smt .)
    LPAREN          reduce using rule 4 (smt -> print_smt .)
    PRINT           reduce using rule 4 (smt -> print_smt .)
    NUMBER          reduce using rule 4 (smt -> print_smt .)
    BOOLEAN         reduce using rule 4 (smt -> print_smt .)
    STRING          reduce using rule 4 (smt -> print_smt .)
    RBRACE          reduce using rule 4 (smt -> print_smt .)
    RRACE           reduce using rule 4 (smt -> print_smt .)


state 9

    (6) smt -> IF . LPAREN expression RPAREN LBRACE inblock RBRACE
    (7) smt -> IF . LPAREN expression RPAREN LBRACE inblock RBRACE ELSE LBRACE inblock RBRACE

    LPAREN          shift and go to state 42


state 10

    (42) expression -> LPAREN . expression RPAREN
    (11) expression -> . LRACE inblock RRACE LRACE factor RRACE
    (12) expression -> . LRACE inblock RRACE
    (14) expression -> . expression LRACE factor RRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression POWER expression
    (23) expression -> . expression MODULUS expression
    (24) expression -> . expression FLOOR expression
    (25) expression -> . expression LESS expression
    (26) expression -> . expression GREAT expression
    (27) expression -> . expression LESSEQU expression
    (28) expression -> . expression GREATEQU expression
    (29) expression -> . expression EQU expression
    (30) expression -> . expression NOTEQU expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression NOT expression
    (34) expression -> . expression IN expression
    (35) expression -> . NOT expression
    (36) expression -> . MINUS expression
    (37) expression -> . factor
    (42) expression -> . LPAREN expression RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . BOOLEAN
    (40) factor -> . STRING
    (41) factor -> . ID

    LRACE           shift and go to state 44
    NOT             shift and go to state 15
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 17
    BOOLEAN         shift and go to state 18
    STRING          shift and go to state 19
    ID              shift and go to state 45

    expression                     shift and go to state 43
    factor                         shift and go to state 13

state 11

    (8) smt -> WHILE . LPAREN expression RPAREN LBRACE inblock RBRACE

    LPAREN          shift and go to state 46


state 12

    (9) smt -> ID . ASSIGN expression SEMI
    (10) smt -> ID . LRACE factor RRACE ASSIGN expression SEMI
    (41) factor -> ID .

  ! shift/reduce conflict for LRACE resolved as shift
    ASSIGN          shift and go to state 47
    LRACE           shift and go to state 48
    COMMA           reduce using rule 41 (factor -> ID .)
    PLUS            reduce using rule 41 (factor -> ID .)
    MINUS           reduce using rule 41 (factor -> ID .)
    TIMES           reduce using rule 41 (factor -> ID .)
    DIVIDE          reduce using rule 41 (factor -> ID .)
    POWER           reduce using rule 41 (factor -> ID .)
    MODULUS         reduce using rule 41 (factor -> ID .)
    FLOOR           reduce using rule 41 (factor -> ID .)
    LESS            reduce using rule 41 (factor -> ID .)
    GREAT           reduce using rule 41 (factor -> ID .)
    LESSEQU         reduce using rule 41 (factor -> ID .)
    GREATEQU        reduce using rule 41 (factor -> ID .)
    EQU             reduce using rule 41 (factor -> ID .)
    NOTEQU          reduce using rule 41 (factor -> ID .)
    AND             reduce using rule 41 (factor -> ID .)
    OR              reduce using rule 41 (factor -> ID .)
    NOT             reduce using rule 41 (factor -> ID .)
    IN              reduce using rule 41 (factor -> ID .)
    RBRACE          reduce using rule 41 (factor -> ID .)
    RRACE           reduce using rule 41 (factor -> ID .)

  ! LRACE           [ reduce using rule 41 (factor -> ID .) ]


state 13

    (37) expression -> factor .
